--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 html{
     scroll-behavior: smooth;
     width: 100%;
 }
 body{
     background: linear-gradient(135deg,rgb(0, 187, 255),rgb(89, 0, 255));
-    font-family: cursive;
+    font-family: 'Ubuntu', sans-serif;
     text-align: left;
     margin: 0px;
 }
